--- a/index.html
+++ b/index.html
@@ -1,12 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
-    <!-- Do reads the rule then start & good luck -->
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>INTRA'21</title>
+  <!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+  <div class="container-fluid">
+    <div class="Nav">
+      <div>
+        <img src="../assets/gx.png" width="50" height="50" />
+      </div>
+      <h4>INTRA'21</h4>
+      <h5>CUrBrain</h5>
+    </div>
+    <div class="main">
+      <h4 class="heading">
+        <span class="red-line"></span>
+        <span class="heading-text">
+          <span class="red">G</span>EE<span class="red">KONI</span>X
+        </span>
+        <span class="red-line"></span>
+      </h4>
+      <div class="events">
+        <div class="event-item">
+          <h5 class="item-title">Workshops, Seminars and Talks</h5>
+          <p class="item-text">Geekonix conducts workshops related to in-trend technical topics such
+            as robotics, coding, photography, and many more in college. Seminars
+            focussing on higher studies, alternative career paths and
+            opportunities are organized frequently. The college students get to
+            experience inspirational talks with various eminent personalities from
+            time to time.
+          </p>
+        </div>
+        <div class="event-item">
+          <h5 class="item-title">Technical Events</h5>
+          <p class="item-text">EDGE - the brainchild of Geekonix and the second-largest tech fest in
+            Eastern India, is organized by Geekonix with 48+ enthralling events
+            with an unimaginable prize pool. For the students of our college to be
+            able to savour EDGE with more tenacity and thrill, Geekonix organizes
+            INTRA college tech fest exclusively for the college students.
+          </p>
+        </div>
+        <div class="event-item">
+          <h5 class="item-title">Fun Events</h5>
+          <p class="item-text">The 3 days of EDGE are made more enjoyable, with FUN EVENTS like Paint
+            Ball, Laser Tag, Red Bull Pong, Body Zorbing, Flip the Bottle and
+            selfie competitions. After a day of intense competition and events, it
+            helps the participants to relieve themselves and enjoy the moments.
+            Winners get goodies and gift vouchers.
+          </p>
+        </div>
+      </div>
+
+      
+    </div>
+    <div class="footer">
+
+    </div>
+  </div>
+</body>
+<!-- jQuery library -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+<!-- Latest compiled JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
 </html>
