--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <div class="container-fluid">
     <div class="Nav">
       <div>
-        <img src="../assets/gx.png" width="50" height="50" class="logo" />
+        <img src="../assets/gx.png" width="50" height="50" id="logo" />
       </div>
       <h4>INTRA'21</h4>
       <h5>CUrBrain</h5>
